--- a/client/user/index.html
+++ b/client/user/index.html
@@ -23,10 +23,10 @@
     <meta charset="utf-8">
     <meta name="viewport"
           content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
-    <script src="./bower_components/webcomponentsjs/webcomponents-loader.js"></script>
-    <script src="./node_modules/redux/dist/redux.js"></script>
-    <link rel="icon" href=".images/favicon-16x16.png" type="image/png">
-    <link rel=import href="./src/meal-order/meal-order.html">
+    <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="node_modules/redux/dist/redux.js"></script>
+    <link rel="icon" href="images/favicon-16x16.png" type="image/png">
+    <link rel=import href="src/meal-order/meal-order.html">
     <title>MealOrder</title>
     <style>
         body {
