Add routing import to meal order

--- a/client/user/src/mealorder/meal-order.html
+++ b/client/user/src/mealorder/meal-order.html
@@ -19,11 +19,13 @@
   -->
 <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
-
+<link rel="import" href="../../bower_components/app-route/app-location.html">
+<link rel="import" href="../../bower_components/app-route/app-route.html">
 <dom-module id="meal-order">
     <template>
         <style>
         </style>
+
         <app-location route="{{route}}"
                       use-hash-as-path></app-location>
 
