--- a/client/user/src/mealorder/meal-order.html
+++ b/client/user/src/mealorder/meal-order.html
@@ -75,7 +75,8 @@
                         attr-for-selected="name"
                         fallback-selection="view404"
                         role="main">
-
+                    <user-cart name="menu" order="[[order]]"
+                               on-dish-removed="_removeDishFromOrder"></user-cart>
                     <app-datepicker id="date-picker" name="history" view="vertical"
                                     date="{{currentDate}}" auto-update-date="true"></app-datepicker>
                 </iron-pages>
