--- a/client/user/src/mealorder/meal-order.html
+++ b/client/user/src/mealorder/meal-order.html
@@ -125,10 +125,19 @@
                                     </div>
                                 </div>
                             </iron-pages>
-
                         </div>
                     </app-toolbar>
                 </app-header>
+
+                <iron-pages
+                        selected="[[routeData.page]]"
+                        attr-for-selected="name"
+                        fallback-selection="view404"
+                        role="main">
+                    <menu-order name="menu" on-dish-added="_addDishToOrder"></menu-order>
+                    <user-history name="history" cart="[[history]]" narrow="[[narrow]]"></user-history>
+                </iron-pages>
+
             </app-header-layout>
 
         </app-drawer-layout>
