Add observers for `meal-order` component

--- a/client/user/src/mealorder/meal-order.html
+++ b/client/user/src/mealorder/meal-order.html
@@ -149,6 +149,13 @@
                 return 'meal-order';
             }
 
+            static get observers() {
+                return [
+                    '_updateDate(currentDate)',
+                    '_changehistoryUrl(currentDate)'
+                ];
+            }
+
             static get actions() {
                 return {
                     addDish(dish) {
