--- a/client/user/src/mealorder/menu/menu-order.html
+++ b/client/user/src/mealorder/menu/menu-order.html
@@ -31,6 +31,21 @@
                 data="{{routeData}}"
                 tail="{{subroute}}">
         </app-route>
+
+        <paper-tabs class="tabs" selected="[[routeData.menu]]" attr-for-selected='key'>
+            <template is="dom-repeat" items="{{menuForDates}}" as="calendar">
+                <paper-tab key="[[calendar.date.year]]-[[calendar.date.month]]-[[calendar.date.day]]" link>
+                    <a class="link" name="[[calendar.date.year]]/[[calendar.date.month]]/[[calendar.date.day]]"
+                       href="/#/menu/#/[[calendar.date.year]]/[[calendar.date.month]]/[[calendar.date.day]]"
+                       on-click="_handleClick">
+                        <div>
+                            <div class="day-of-the-week">Пн</div>
+                            <div class="day">{{calendar.date.day}}</div>
+                        </div>
+                    </a>
+                </paper-tab>
+            </template>
+        </paper-tabs>
     </template>
     <script>
         class MenuOrder extends ReduxMixin(Polymer.Element) {
