Add actions for the `menu-order` component

--- a/client/user/src/mealorder/menu/menu-order.html
+++ b/client/user/src/mealorder/menu/menu-order.html
@@ -69,6 +69,17 @@
                 ];
             }
 
+            static get actions() {
+                return {
+                    menuForDay(date) {
+                        return {
+                            type: ArrayAction.MENU_FOR_DAY,
+                            date: date
+                        }
+                    },
+                }
+            }
+
             static get properties() {
                 return {
                     /**
