Add event handler for the `dish-added` event

--- a/client/user/src/mealorder/menu/menu-order.html
+++ b/client/user/src/mealorder/menu/menu-order.html
@@ -124,6 +124,10 @@
                 this.dispatch('menuForDay', this.menuForDates[e.model.index]);
             }
 
+            addDishToOrder(e) {
+                this.dispatchEvent(new CustomEvent('dish-added', {detail: e.detail}));
+            }
+
         }
         window.customElements.define(MenuOrder.is, MenuOrder);
     </script>
