Add a button handler to remove the dish from the order

--- a/client/user/src/mealorder/menu/user-cart.html
+++ b/client/user/src/mealorder/menu/user-cart.html
@@ -86,6 +86,13 @@
                     }
                 }
             };
+
+            _removeDish(e) {
+                const dish = {};
+                dish.vendor = e.model.parentModel.__data.dish.vendor;
+                dish.name = e.model.__data.d.title;
+                this.dispatchEvent(new CustomEvent('dish-removed', {detail: dish}));
+            }
         }
 
         window.customElements.define(UserCart.is, UserCart);
