Add docs for the `user-cart` component

--- a/client/user/src/mealorder/menu/user-cart.html
+++ b/client/user/src/mealorder/menu/user-cart.html
@@ -116,6 +116,14 @@
         </div>
     </template>
     <script>
+        /**
+         * user-cart is user's order for current date.
+         *
+         * <p>Is adopted for both desktop and mobile.
+         *
+         * @customElement
+         * @polymer
+         */
         class UserCart extends Polymer.Element {
             static get is() {
                 return 'user-cart';
